objects/CTR_ValueChainPlayers__c.object
<CustomObject>
    <fields>
        <fullName>Account_Role__c</fullName>
        <label>Account Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Delegated as Primary</fullName>
                </value>
                <value>
                    <fullName>Distributors / Resellers</fullName>
                </value>
                <value>
                    <fullName>Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>Fulfillment Channel</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Lead Finder</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Panel Builders</fullName>
                </value>
                <value>
                    <fullName>Specifier</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Value Chain Players</relationshipLabel>
        <relationshipName>Contract_Value_Chain_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <formula>Contact__r.WorkPhone__c</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRole__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Business Development Specialist</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contract Admin</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Financial Buyer</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Internal Enabler</fullName>
                </value>
                <value>
                    <fullName>Onsite Engineer</fullName>
                </value>
                <value>
                    <fullName>Operational end user</fullName>
                </value>
                <value>
                    <fullName>Outside Sales</fullName>
                </value>
                <value>
                    <fullName>Political Influencer</fullName>
                </value>
                <value>
                    <fullName>Primary Partner Contact</fullName>
                </value>
                <value>
                    <fullName>Primary User</fullName>
                </value>
                <value>
                    <fullName>Solution Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Value Chain Players</relationshipLabel>
        <relationshipName>Contract_Value_Chain_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <formula>Contract__r.Name</formula>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <formula>TEXT(Contract__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the Contract</inlineHelpText>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractVCP_VIPIcon__c</fullName>
        <formula>Account__r.Account_VIPIcon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;VIPIcon&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Value Chain Players</relationshipLabel>
        <relationshipName>Contract_Value_Chain_Players</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EclipseAccessRequest__c</fullName>
        <description>Status of Eclipse</description>
        <inlineHelpText>Status of Eclipse</inlineHelpText>
        <label>Eclipse Access Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eclipse_Feature_Manage__c</fullName>
        <formula>HYPERLINK(&quot;/apex/VFP_AddorRemoveEclipseFeature?contactId=&quot;+Contact__c+&quot;&amp;CVCPId=&quot;+Id, IF(ISPICKVAL(Contract__r.WebAccess__c, &apos;Eclipse&apos;), &apos;[Eclipse Feature Manage]&apos;, IF(ISPICKVAL(Contract__r.WebAccess__c, &apos;Cassini&apos;), &apos;[Cassini Feature Manage]&apos;, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Eclipse Feature Manage&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyBeneficiaryId__c</fullName>
        <description>Stores the Vantive Id</description>
        <externalId>true</externalId>
        <label>Legacy Beneficiary Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyPIN__c</fullName>
        <label>Legacy PIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterPIN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uniqueness of Legacy PIN will be checked, if Master Pin is not checked</description>
        <label>Master PIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Beneficiary Point Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PortalAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R6 2017 Release: BFOCCC-325, This field will store whether the cvcp has access to portal</description>
        <label>Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SupportContractLevel__c</fullName>
        <description>Related Contract&apos;s active Package&apos;s highest Level</description>
        <formula>TEXT( Contract__r.SupportContractLevel__c )</formula>
        <label>Support Contract Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_DuplicateKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>To check for duplicate records</description>
        <label>TECH_DuplicateKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Contract Value Chain Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>Contact__c</columns>
        <columns>ContactRole__c</columns>
        <columns>Account_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVENSYS_CFID</fullName>
        <columns>NAME</columns>
        <columns>ContractName__c</columns>
        <columns>LegacyPIN__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>ContactRole__c</columns>
        <columns>MasterPIN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00038255</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/20/2017 12:00 AM</value>
        </filters>
        <label>INVENSYS CFID</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVENSYS_CFID_specifc</fullName>
        <columns>NAME</columns>
        <columns>ContractName__c</columns>
        <columns>LegacyPIN__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>ContactRole__c</columns>
        <columns>MasterPIN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00038255</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/20/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Agrium</value>
        </filters>
        <label>INVENSYS CFID specifc</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVENSYS_M_I</fullName>
        <columns>NAME</columns>
        <columns>ContractName__c</columns>
        <columns>LegacyPIN__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>ContactRole__c</columns>
        <columns>MasterPIN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00038255</value>
        </filters>
        <label>INVENSYS M&amp;I</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Invensys_Contacts_CVCP</fullName>
        <booleanFilter>1 or 2 or 3 or 4 or 5</booleanFilter>
        <columns>NAME</columns>
        <columns>ContractName__c</columns>
        <columns>Contact__c</columns>
        <columns>LegacyPIN__c</columns>
        <columns>ContactEmail__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>MasterPIN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account__c</columns>
        <columns>Account_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>0038255</value>
        </filters>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00044530</value>
        </filters>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00044531</value>
        </filters>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00044532</value>
        </filters>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00044533</value>
        </filters>
        <label>Invensys - Contacts CVCP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Invensys_Contacts_CVCP_44533</fullName>
        <columns>NAME</columns>
        <columns>ContractName__c</columns>
        <columns>Contact__c</columns>
        <columns>LegacyPIN__c</columns>
        <columns>ContactEmail__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>MasterPIN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account__c</columns>
        <columns>Account_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00044533</value>
        </filters>
        <label>Invensys - Contacts CVCP 44533</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Invensys_Contacts_CVCP_445331</fullName>
        <columns>NAME</columns>
        <columns>ContractName__c</columns>
        <columns>Contact__c</columns>
        <columns>LegacyPIN__c</columns>
        <columns>ContactEmail__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>MasterPIN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account__c</columns>
        <columns>Account_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00044533</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/1/2017 12:00 AM</value>
        </filters>
        <label>Invensys - Contacts CVCP 44533</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ma_vue</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>Contact__c</columns>
        <columns>ContactRole__c</columns>
        <columns>Account_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LegacyPIN__c</field>
            <operation>equals</operation>
            <value>208372</value>
        </filters>
        <label>ma vue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CVCP-{000000}</displayFormat>
        <label>Contract Value Chain Player Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Value Chain Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CVCP_VR_JUN13CCC01_CheckBlankLegacyPIN</fullName>
        <active>true</active>
        <description>Checks whether Legacy PIN is filled, if Master PIN is checked</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c) , MasterPIN__c, ISBLANK( LegacyPIN__c))</errorConditionFormula>
        <errorDisplayField>LegacyPIN__c</errorDisplayField>
        <errorMessage>Legacy PIN is mandatory if Master PIN is checked</errorMessage>
    </validationRules>
</CustomObject>